<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_user">Снимка на кампания</string>
    <string name="tab_people">ХОРА</string>
    <string name="tab_organisations">ОРГАНИЗАЦИИ</string>
    <string name="tab_specials">СПЕЦИАЛНИ</string>
    <string name="tab_other">ДРУГИ</string>
    <string name="send_sms_button">ИЗПРАТИ SMS</string>
    <string name="bg_money">лв.</string>
    <string name="pricesms_title">Стойност на SMS</string>
    <string name="numbersms_title">Номер</string>
    <string name="title_link_to_web">Линк към страницата</string>
    <string name="startdate_title">Стартирала на &#160;</string>
    <string name="internet_title">Необходима е връзка с Интернет</string>
    <string name="ok">Добре</string>
    <string name="new_data">Изтеглят се нови данни</string>
    <string name="send_sms_title">SMS изпратен на 27 Април 2014</string>
    <string name="history">Изпратени SMS-и</string>

    <string-array name="months_names">
        <item>Януари</item>
        <item>Февруари</item>
        <item>Март</item>
        <item>Април</item>
        <item>Май</item>
        <item>Юни</item>
        <item>Юли</item>
        <item>Август</item>
        <item>Септември</item>
        <item>Октомври</item>
        <item>Ноември</item>
        <item>Декември</item>
    </string-array>

    <string name="title_activity_show_statistics">ShowStatistics</string>

</resources>