<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tab_people"
            android:layout_width="fill_parent" 
    		android:layout_height="fill_parent"
            android:layout_weight="1" 
            android:gravity="center"
            android:textSize="14sp"
            android:background="@drawable/text_state"
            android:text="@string/tab_people"
            android:clickable="true"/>
        <TextView
            android:id="@+id/tab_organisations"
            android:layout_width="fill_parent" 
    		android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:textSize="14sp"
            android:background="@drawable/text_state"
            android:text="@string/tab_organisations"
            android:clickable="true"/>
        <TextView 
            android:id="@+id/tab_special"
            android:layout_width="fill_parent" 
   			android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:background="@drawable/text_state"
            android:text="@string/tab_specials"
            android:clickable="true"/>
        <TextView 
            android:id="@+id/tab_other"
            android:layout_width="fill_parent" 
    		android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:background="@drawable/text_state"
            android:text="@string/tab_other"
            android:clickable="true"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>