<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/tab_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_state"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/people_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/tab_people"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator_color" />

        <LinearLayout
            android:id="@+id/tab_organisations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/text_state"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/people_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/tab_organisations"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator_color" />

        <LinearLayout
            android:id="@+id/tab_special"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:background="@drawable/text_state"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/people_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/tab_specials"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator_color" />

        <LinearLayout
            android:id="@+id/tab_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_state"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/people_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/tab_other"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator_color" />
        
        <LinearLayout
            android:id="@+id/tab_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/text_state"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_action_overflow"/>
        </LinearLayout>
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_list_color" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_grey"
        android:divider="@color/separator_list_color"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent" />

</LinearLayout>